logs/p4a.calendar.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/p4a'...
Listing './lib/python3.5/site-packages/p4a/calendar'...
Listing './lib/python3.5/site-packages/p4a/calendar/browser'...
Listing './lib/python3.5/site-packages/p4a/calendar/browser/resources'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/de'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/el'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/en'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/es'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/fi'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/fr'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/nl'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/no'...
Listing './lib/python3.5/site-packages/p4a/calendar/locales/no/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/p4a/common'...
Listing './lib/python3.5/site-packages/p4a/common/descriptors'...
Compiling './lib/python3.5/site-packages/p4a/common/descriptors/_anno.py'...
***   File "./lib/python3.5/site-packages/p4a/common/descriptors/_anno.py", line 4
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p4a/common/testing.py'...
***   File "./lib/python3.5/site-packages/p4a/common/testing.py", line 17
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a/z2utils'...
Compiling './lib/python3.5/site-packages/p4a/z2utils/patches.py'...
***   File "./lib/python3.5/site-packages/p4a/z2utils/patches.py", line 70
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a/z2utils/tests'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir1'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir1/ns'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir1/ns/pkg1'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir2'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir2/ns'...
Listing './lib/python3.5/site-packages/p4a/z2utils/tests/samples/dir2/ns/pkg2'...
Compiling './lib/python3.5/site-packages/p4a/z2utils/utils.py'...
***   File "./lib/python3.5/site-packages/p4a/z2utils/utils.py", line 126
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p4a.calendar-1.2.egg-info'...
Listing './lib/python3.5/site-packages/p4a.common-1.1.egg-info'...
Listing './lib/python3.5/site-packages/p4a.z2utils-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
